update the useful function

--- a/Useful function.ipynb
+++ b/Useful function.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5fbab9",
+   "id": "87100263",
    "metadata": {},
    "source": [
     "# forward 函数"
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e19999b2",
+   "id": "4da6aa94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "00cabf8e",
+   "id": "dedf4bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4767993c",
+   "id": "46b33b21",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c300dc9a",
+   "id": "10820e7a",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64a75f2d",
+   "id": "e31f7d17",
    "metadata": {
     "scrolled": true
    },
@@ -228,6 +228,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad607e1d",
+   "metadata": {},
+   "source": [
+    "# super example\n",
+    "\n",
+    "super找自己的父类，正如Child是Base的子类一样"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c0130869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Base():\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        print(\"base: \", self.name)\n",
+    "        print(\"here is the father name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c2d535a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base:  alex\n",
+      "here is the father name\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Base(\"alex\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "97eae1fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Child(Base):\n",
+    "    def __init__(self, name, age):\n",
+    "        super(Child, self).__init__(name)\n",
+    "        self.age = age\n",
+    "        print(\"here is child name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b20c621b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base:  1\n",
+      "here is the father name\n",
+      "here is child name\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = Child(1,4)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2b6ea609",
@@ -238,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dfee6dd",
+   "id": "edf34772",
    "metadata": {},
    "outputs": [],
    "source": []
